[package]
name = "bevy-jam-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_egui = "0.20.2"
bevy_rapier2d = "0.21.0"
bevy_turborand = "0.5.0"
strum = { version = "0.24.1", features = ["derive"] }
